--- a/main/about.html
+++ b/main/about.html
@@ -85,7 +85,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="about">
-<div class="aboutp"><p class="main">ABOUT US</p><p>Georgian is the very famous word for health care sector , doctors of K.G.M.C. known as Georgian becuase of it's name king george medical college. They provoide their services to the patients. They are known for the patients as God, as hope of life to cure the disease. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a> and <a href="ssantra.html">Mr. Sowmen Santra</a> in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
+<div class="aboutp"><p class="main">ABOUT US</p><p>The concept of Georgian Pharmaceuticals basically came when we saw that many people left their treatment due to high cost of their treatment. Some time left their treatment due to expensive cost of medicine.  Our main objective is to provided economic therapy to the poor patients of the world. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a> and <a href="ssantra.html">Mr. Sowmen Santra</a> in 2014 for hope of life to cure desease by the dedication of all the three person georgian pharmaceuticals established.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
