--- a/main/1.html
+++ b/main/1.html
@@ -85,7 +85,8 @@
     <!-- Carousel
     ================================================== -->
     <div class="pro">
-<div class="prop"><p class="main">LYCOVITA</p><p>COMING SOON</p></div>
+<div class="prop"><p class="main">LYCOVITA</p><p>Lycovita is the combination of lycopene with vitamine A,C,E,D3,B1,B2,B3,B5,B6,B12,folic acid, L-lysine, minirals-zinc, cromium,magnese,magnicium,selenium, iodine....
+</p><p>LYCOVITA USED IN GENERAL DIABILITY,</p></div>
 
     </div><!-- /.carousel -->
 <div class="container marketing">
